--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "quiprendquoi",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "QuiprendQuoi organize events and get know who take what",
+  "main": "app.js",
   "scripts": {
-    "start": "concurrently --kill-others \"npm run sass\" \"npm run watchify\" \"nodemon app.js\" \"npm run sw\"",
+    "start": "concurrently --kill-others \"npm run sass\" \"npm run watchify\" \"npm run sw\" \"nodemon app.js\" ",
     "sass": "node-sass styles/style.scss public/style.css -w --output-style compressed",
     "sw": "watchify sw.js -o public/sw.js -t [ babelify --presets [ babel-preset-minify ] ]",
     "watchify": "watchify scripts/*.js -o public/script.js -t [ babelify --presets [ @babel/preset-env babel-preset-minify ] ]"
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
