--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "babel-preset-minify": "^0.5.1",
     "babelify": "^10.0.0",
     "concurrently": "^5.1.0",
