--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "QuiprendQuoi organize events and get know who take what",
   "main": "app.js",
   "scripts": {
-    "start": "concurrently --kill-others \"npm run sass\" \"npm run watchify\" \"npm run sw\" \"nodemon app.js\" ",
+    "start": "concurrently --kill-others \"npm run sass\" \"npm run jquery\" \"npm run watchify\" \"npm run sw\" \"npm run bootstrap-js\" \"nodemon app.js\" ",
     "sass": "node-sass styles/style.scss public/style.css -w --output-style compressed",
     "sw": "watchify sw.js -o public/sw.js -t [ babelify --presets [ babel-preset-minify ] ]",
-    "watchify": "watchify scripts/*.js -o public/script.js -t [ babelify --presets [ @babel/preset-env babel-preset-minify ] ]"
+    "watchify": "watchify scripts/*.js -o public/script.js -t [ babelify --presets [ @babel/preset-env babel-preset-minify ] ]",
+    "bootstrap-js": "watchify node_modules/bootstrap/dist/js/bootstrap.min.js -o public/bootstrap.min.js -t [ babelify --presets [ @babel/preset-env babel-preset-minify ] ]",
+    "jquery": "watchify node_modules/jquery/dist/jquery.min.js -o public/jquery.min.js -t [ babelify --presets [ @babel/preset-env babel-preset-minify ] ]"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +20,10 @@
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "method-override": "^3.0.0",
-    "pug": "^2.0.4",
-    "turbolinks": "^5.2.0"
+    "popper.js": "^1.16.1",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
