--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "QuiprendQuoi organize events and get know who take what",
   "main": "app.js",
   "scripts": {
-    "start": "concurrently \"npm run sass\" \"npm run jquery\" \"npm run watchify\" \"npm run sw\" \"npm run bootstrap-js\" \"nodemon app.js\" ",
+    "start": "concurrently --kill-others \"npm run sass\" \"npm run jquery\" \"npm run watchify\" \"npm run sw\" \"npm run bootstrap-js\" \"nodemon app.js\" ",
     "sass": "node-sass styles/style.scss public/style.css -w --output-style compressed",
     "sw": "watchify sw.js -o public/sw.js -t [ babelify --presets [ babel-preset-minify ] ]",
     "watchify": "watchify scripts/*.js -o public/script.js -t [ babelify --presets [ @babel/preset-env babel-preset-minify ] ]",
@@ -23,7 +23,8 @@
     "jquery": "^3.4.1",
     "method-override": "^3.0.0",
     "popper.js": "^1.16.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
