--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "method-override": "^3.0.0",
+    "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
+    "watchify": "^3.11.1",
     "popper.js": "^1.16.1",
     "pug": "^2.0.4",
     "turbolinks": "^5.2.0"
