--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "babel-preset-minify": "^0.5.1",
+    "babelify": "^10.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
